# Listen_OS

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SETUP.md  eslint.config.mjs  package-lock.json  package.json
backend/: Cargo.toml  tauri.conf.json
backend/icons/: icon.icns
backend/src/: correction.rs  error_log.rs  lib.rs
backend/src/ai/: mod.rs
backend/src/audio/: mod.rs
backend/src/clipboard/: mod.rs
backend/src/cloud/: mod.rs
backend/src/commands/: custom.rs  mod.rs
backend/src/config/: mod.rs
backend/src/conversation/: mod.rs
backend/src/delivery/: mod.rs
backend/src/dictionary/: mod.rs
backend/src/integrations/: discord.rs  mod.rs  spotify.rs  system_controls.rs
backend/src/notes/: mod.rs
backend/src/snippets/: mod.rs
backend/src/streaming/: mod.rs
backend/src/system/: mod.rs
docs/: macos-smoke-test-checklist.md
src/app/: globals.css
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/(dashboard)/commands/: page.tsx
src/app/(dashboard)/conversation/: page.tsx
src/app/(dashboard)/dictionary/: page.tsx
src/app/(dashboard)/integrations/: page.tsx
src/app/(dashboard)/snippets/: page.tsx
src/app/(dashboard)/tone/: page.tsx
src/app/(overlay)/: layout.tsx
src/app/(overlay)/assistant/: page.tsx
src/components/: ErrorNotification.tsx
src/components/dashboard/: ActivityTable.tsx  DashboardContent.tsx  FeatureTip.tsx  GreetingCard.tsx  StatsBar.tsx
src/components/layout/: AppShell.tsx  SettingsModal.tsx  Sidebar.tsx
src/components/onboarding/: OnboardingModal.tsx
src/components/ui/: divider.tsx  select.tsx
src/context/: SettingsContext.tsx  ToastContext.tsx
src/lib/: tauri.ts  utils.ts
src/utils/: polymorphic.ts  recursive-clone-children.tsx  tv.ts
