[package]
name = "listenos-backend"
version = "0.1.21"
description = "ListenOS - AI-Powered Voice Control System"
authors = ["ListenOS"]
license = "PROPRIETARY"
edition = "2021"

[lib]
name = "voice_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio Capture
cpal = "0.15"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# WebSocket for real-time streaming
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP Client for API calls
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# System Control
enigo = "0.2"

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Channel communication
crossbeam-channel = "0.5"
tokio-stream = "0.1"

# Base64 for audio encoding
base64 = "0.21"

# URL handling
url = "2"

# Bytes for binary data
bytes = "1"

# Audio encoding (for WAV/PCM conversion)
hound = "3.5"
dotenvy = "0.15.7"

# SQLite for persistent storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Clipboard
arboard = "3"

# Directory paths
dirs-next = "2"

# Lazy initialization
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse"
] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
